--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.github.chengxuncc:fileprefs:1.0'
     compileOnly files('libs/api-82.jar')
     implementation 'eu.chainfire:libsuperuser:201501111220'
 }
