--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.test.ext:junit:1.1.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.chengxuncc:fileprefs:1.0'
     compileOnly files('libs/api-82.jar')
