--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,9 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation "androidx.activity:activity:1.8.2"
+    implementation "androidx.fragment:fragment:1.6.2"
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.test.ext:junit:1.1.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.chengxuncc:fileprefs:1.0'
